# MMSS-Maximum-Matching

./: .gitignore  CMakeLists.txt  MMSS-Maximum-Matching.cpp  MMSS-Maximum-Matching.h  README.md  Stream.cpp  Stream.h  main.cpp  maxMatching.cpp  types.h
Stream/: Stream.h  StreamFromFile.cpp  StreamFromFile.h  StreamFromMemory.cpp  StreamFromMemory.h
Structures/: AvailableFreeNodes.cpp  AvailableFreeNodes.h  FreeNodeStructure.cpp  FreeNodeStructure.h  Matching.cpp  Matching.h  types.h
Structures/GraphNode/: GraphBlossom.h  GraphNode.h  GraphVertex.h
Structures/GraphStructure/: GraphBlossom.cpp  GraphBlossom.h  GraphNode.h  GraphVertex.cpp  GraphVertex.h
